--- a/Pagina1.html
+++ b/Pagina1.html
@@ -204,6 +204,17 @@
                                 <div class="accordion-body">Aunque fue su último álbum antes de su separación en 1995, "El nervio del volcán" es considerado por muchos como una obra maestra del rock en español. Su sonido más oscuro y experimental lo hace uno de los discos más influyentes y respetados de la banda.</div>
                             </div>
                         </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                                    Dato #6
+                                </button>
+                            </h2>
+                            <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">En una entrevista para la revista ibérica Popular 1, Diego Herrera, tecladista de Caifanes, declaró que en sus inicios como grupo, estaban pensando en irse a vivir España, ya que consideraban que una banda como Caifanes no podría funcionar en este continente.</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -216,3 +227,4 @@
 </body>
 
 </html>
+
